--- a/client/src/components/Login/index.css
+++ b/client/src/components/Login/index.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #5b607e;
+    background-color: #5b607e !important;
+}
+.login {
     color: #ffffff;
     font-family: sans-serif;
     text-align: center;
