--- a/client/src/components/App/index.css
+++ b/client/src/components/App/index.css
@@ -1,6 +1,12 @@
-body {
-    color: #333333;
+html, body
+{
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-family: 'Segoe UI', sans-serif;
+}
+#root {
+    height: 100%;
 }
 .App {
     display: flex;
