--- a/client/src/components/GroupsSidebar/index.css
+++ b/client/src/components/GroupsSidebar/index.css
@@ -1,19 +1,37 @@
 .sidebar {
-    background-color: #e9e9e9;
+    background-color: #f0f0f0;
     order: -1;
     max-width: 6em;
-    padding-top: 1.2em;
-    flex-grow: 0;    /* Defined the ability to grow */
-    flex-shrink: 0;  /* Defines the ability to shrink */
-    flex-basis: 12em;/* Default value of the element before distribuing the remaing space */
+    flex-grow: 0; /* Defined the ability to grow */
+    flex-shrink: 0; /* Defines the ability to shrink */
+    flex-basis: 12em; /* Default value of the element before distribuing the remaing space */
 }
+
+.sidebar ul li.personal {
+    background-color: #eaeaea;
+    text-align: center;
+    font-size: 28px;
+    line-height: 52px;
+    color: #535353;
+    height: 18px;
+    min-height: 52px;
+}
+
+.sidebar ul li.personal:hover {
+    background-color: #dbdbdb;
+}
+
 .sidebar ul {
+    margin: 0px;
     list-style-type: none;
     padding-left: 0px;
 }
+
 .sidebar ul li {
-    min-height: 5em;
+    min-height: 60px;
     vertical-align: middle;
+    padding: 8px;
+    cursor: pointer;
 }
 
 .sidebar ul li .ms-Persona .ms-Persona-coin {
