--- a/client/src/components/Login/index.css
+++ b/client/src/components/Login/index.css
@@ -21,6 +21,7 @@ body {
     font-size: 14px;
 }
 .login-box {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 3px 0px;
     text-align: left;
     color: #333333;
     padding: 35px;
