navbar and editor additions

--- a/client/src/components/Group/index.css
+++ b/client/src/components/Group/index.css
@@ -1,8 +1,15 @@
-.group {
+.main {
     width: 100%;
-    background-color: #f8f8f8;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.group {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f8f8;
 }
 .group .note {
     display: flex;
