--- a/client/src/components/App/index.css
+++ b/client/src/components/App/index.css
@@ -4,6 +4,7 @@ html, body
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', sans-serif;
+    overscroll-behavior: none;
 }
 #root {
     height: 100%;
