--- a/client/src/components/Group/index.css
+++ b/client/src/components/Group/index.css
@@ -9,16 +9,13 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    background-color: #f8f8f8;
 }
 .group .note {
-    display: flex;
-    flex-direction: row;
     width: 100%;
     background-color: white;
 }
 .group .sidebar {
-    background-color: #fbfbfb;
+    background-color: rgba(244,244,244,1);
     order: 1;
     min-width: 30%;
     flex-grow: 0;    /* Defined the ability to groe */
