--- a/client/src/components/Group/components/Note/index.css
+++ b/client/src/components/Group/components/Note/index.css
@@ -1,6 +1,23 @@
 .notepad {
+    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
     display: block;
     padding: 15px;
+}
+.notepad h1 {
+    border-bottom: thin solid #dfdfdf;
+    padding-bottom: 15px;
+}
+.notepad ul li {
+    list-style-type: circle;
+}
+.notepad ul li::before {
+    content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: #373f70; /* Change the color */
+    font-weight: bold; /* If you want it to be bold */
+    display: inline-block; /* Needed to add space between the bullet and the text */
+    width: 1em; /* Also needed for space (tweak if needed) */
+    margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
 .note .toolbar {
     width: 100%;
