--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,10 @@
     height: 100%;
     width: 100%;
 }
+
+.nothing-here {
+    text-align: center;
+    width: 100%;
+    color: #7a7a7a;
+    font-size: 12px;
+}
