--- a/client/src/components/Group/components/Comments/index.css
+++ b/client/src/components/Group/components/Comments/index.css
@@ -1,6 +1,13 @@
+.chat {
+    height: 100%;
+    max-height: 100%;
+}
+
 .conversation {
     padding: 15px;
+    height: 100%;
 }
+
 .conversation .ms-ActivityItem {
     margin-bottom: 5px;
 }
