--- a/client/src/components/Group/index.css
+++ b/client/src/components/Group/index.css
@@ -27,6 +27,9 @@
     height: 100%;
     overflow-y: auto;
 }
+div[role="tabpanel"] {
+    height: 100%;
+}
 .group .sidebar .ms-FocusZone {
     border-bottom: thin solid #c6c6c6;
 }
